--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
-body {
-  background-color: #000;
-  color: #fff;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-/* #canvas {} */
+
+body {
+  width: 100vw;
+  height: 100vh;
+  /* overflow: hidden; */
+  /* background-color: #000;
+  color: #fff; */
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+
+/* #canvas1 {
+  width: 1600px;
+  height: 800px;
+} */
