--- a/style.css
+++ b/style.css
@@ -4,18 +4,29 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   width: 100vw;
-  height: 100vh;
-  /* overflow: hidden; */
-  /* background-color: #000;
-  color: #fff; */
-  /* display: flex;
+  height: 100vh; 
+  overflow: hidden;
+  background-color: #000;
+  color: #fff; 
+  display: flex;
   justify-content: center;
-  align-items: center; */
-}
-
-/* #canvas1 {
-  width: 1600px;
-  height: 800px;
+  align-items: center;
 } */
+
+/* body {
+  width: 100%;
+} */
+
+/* html body {
+  width: 100%;
+  height: 100%;
+} */
+
+#canvas1 {
+  /* width: 1600px;
+  height: 800px; */
+  width: 100%;
+  display: block;
+}
