--- a/style.css
+++ b/style.css
@@ -4,16 +4,16 @@
   box-sizing: border-box;
 }
 
-/* body {
+body {
   width: 100vw;
-  height: 100vh; 
-  overflow: hidden;
+  height: 100vh;
+  /* overflow: hidden;
   background-color: #000;
   color: #fff; 
   display: flex;
   justify-content: center;
-  align-items: center;
-} */
+  align-items: center; */
+}
 
 /* body {
   width: 100%;
@@ -25,8 +25,6 @@
 } */
 
 #canvas1 {
-  /* width: 1600px;
-  height: 800px; */
-  width: 100%;
   display: block;
+  width: 100%;
 }
