--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
 body {
   width: 100vw;
   height: 100vh;
-  /* overflow: hidden;
+  overflow: hidden;
   background-color: #000;
-  color: #fff; 
+  color: #fff;
   display: flex;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
 }
 
 /* body {
@@ -26,5 +26,7 @@ body {
 
 #canvas1 {
   display: block;
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  /* width: 100%; */
 }
