--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  /* background-color: #000; */
+  background-color: #000;
   color: rgba(40, 46, 250, 1);
   display: flex;
   justify-content: center;
